plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.jy_dev'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}
ext {
    set('springCloudVersion', "2023.0.0")
}
repositories {
    mavenCentral()
}

dependencies {
    // 유레카
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter'

    // 롬복
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // jwt
    implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'  // Auth0의 Java JWT 라이브러리
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0' // Apache Commons Lang

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
